# my_painter

./: CMakeLists.txt
MyPainter/: CMakeLists.txt  MyPainter.cpp  MyPainter.h  MyPainter.ui
main/: CMakeLists.txt  main.cpp
main/resourses/: resources.qrc
